<resources>
    <string name="app_name">Diet</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Kebutuhan kalori</string>

    <!-- Label for overflow menu option that inserts fake pet data into the app [CHAR LIMIT=20] -->

    <!-- Label for overflow menu option that deletes all pet data in the app [CHAR LIMIT=20] -->

    <!-- Title for the activity to add a new pet [CHAR LIMIT=20] -->

    <!-- Label for editor menu option to save pet and leave editor [CHAR LIMIT=20] -->

    <!-- Label for editor overflow menu option that deletes the current pet [CHAR LIMIT=20] -->

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_overview">Pengenalan</string>

    <!-- Label for gender information in the editor [CHAR LIMIT=30] -->
    <string name="category_gender">Jenis Kelamin</string>

    <!-- Label for aktifitas information in the editor [CHAR LIMIT=30] -->
    <string name="category_aktifitas">Aktifitas</string>

    <!-- Label for measurement information in the editor [CHAR LIMIT=30] -->
    <string name="category_measurement">Pengukuran</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_user_name">Nama</string>

    <!-- Text hint for breed field in the editor [CHAR LIMIT=30] -->
    <string name="hint_user_umur">Umur</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_user_berat">Berat Badan</string>

    <string name="hint_user_tinggi">Tinggi Badan</string>

    <!-- Units for weight of the pet (kilograms) [CHAR LIMIT=5] -->
    <string name="unit_user_berat">kg</string>

    <string name="unit_user_tinggi">cm</string>

    <!-- Label for dropdown menu option if the pet is male [CHAR LIMIT=20] -->

    <!-- Label for dropdown menu option if the pet is female [CHAR LIMIT=20] -->
    <string name="nama_makanan">Nama makanan</string>
    <string name="rb_text_panahan">Panahan</string>
    <string name="isiTextViewEmptyDataOlahraga">Tap tombol “+” di bawah untuk menambahkan data</string>
    <string name="isiTextViewEmptyDataMakanan2">Tap tombol “+” di bawah untuk menambahkan data</string>
    <string name="pesan_lebih_kalori">Hati-hati mengonsumsi kalori terlalu banyak karena memiliki banyak dampak
        yang buruk bagi kesehatan. Jaga keseimbangan energi dalam tubuh dengan
    seimbang kalori yang dimakan dan kalori yang digunakan (dibakar).
        Ayo mulai berolahraga untuk bakar kalori!</string>
    <string name="pesan_lebih_kalori_dibakar">hati-hati, kamu telah membakar kalori berlebih. Kamu bisa lemas jika kalori yang dibakar lebih banyak
        dari yang dikonsumsi
    </string>
    <string name="title_activity_fab">fab</string>
    <string name="pesan_peringatan_kosong">Belum ada peringatan</string>
    <string name="pesan_peringatan_karbo">Konsumsi karbohidrat anda berlebih
    \n kurangi konsumsi makanan yang mengandung karbohidrat tinggi seperti nasi
    </string>
    <string name="pesan_peringatan_pro">Konsumsi protein anda berlebih
    \n kurangi konsumsi makanan yang mengandung protein tinggi seperti hati ayam
    </string>
    <string name="pesan_peringatan_lemak">Konsumsi lemak anda berlebih
    \n kurangi konsumsi makanan yang mengandung lemak tinggi seperti alpukat
    </string>
    <string name="textView_tentang">Saat diet kita harus menggunakan metode atau cara yang benar,
        salah satunya dapat dilakukan dengan cara menjaga dan mempertahankan fungsi tubuh,
        kita perlu mengatur keseimbangan antara energi yang dikeluarkan atau yang diistilahkan
        sebagai keluaran energi (calory output/calory expenditure) dengan energi yang berasal dari makanan atau
        asupan makanan (calory intake/calory input).
        \n \n Aplikasi ini untuk membantu pengguna dalam melakukan diet dengan memberikan informasi mengenai jumlah
        kebutuhan kalori harian, kalori pada makanan berdasarkan golongan darah, kalori yang keluar dari
        aktivitas olahraga dan mengetahui apakah total kalori dalam tubuh sudah mencukupi kebutuhan kalori harian
        tubuh selama periode 24 jam.
    </string>
    <string name="title_olahraga_activity">Daftar olahraga</string>
    <string name="monitoring">Monitoring</string>
    <string name="makanan">Makanan</string>
    <string name="olahraga">Olahraga</string>
    <string name="title_tentang">Tentang Aplikasi</string>
</resources>